--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -93,10 +93,19 @@
 }
 
 .lot-detail-organizers {
-    .icon {
-        background-image: url(/static/img/lot-detail-organize.png);
-        background-repeat: no-repeat;
-        height: 19px;
-        width: 19px;
+    &-count {
+        color: #8D474D;
+    }
+
+    .organizer-list {
+        font-size: 18px;
+        font-style: italic;
+        list-style: none;
+        padding: 0;
+
+        &-item {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
     }
 }
