--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -109,3 +109,28 @@
         }
     }
 }
+
+.lot-detail-right() {
+    margin-top: 25px;
+}
+
+.lot-detail-content {
+    margin-left: 32px;
+}
+
+.lot-detail-icon {
+    float: left;
+    height: 21px;
+    width: 24px;
+}
+
+.lot-detail-legal {
+    .lot-detail-right();
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+    .lot-detail-icon {
+        background: url(/static/img/lot-detail-legal.png);
+    }
+}
