--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -201,111 +201,130 @@
     <aside id="aside-right">
 
         <section>
-            <h2>
-                {{ lot.display_name|title|default:"unknown" }}
-            </h2>
-            <div class="lot-detail-details">
+            <div class="lot-detail-content">
+                <h2>
+                    {{ lot.display_name|title|default:"unknown" }}
+                </h2>
+                <div class="lot-detail-details">
 
-                {% if lot.parcel %}
-                    <div>
-                        AIN {{ lot.parcel.ain }}
-                    </div>
-                {% endif %}
-
-                <div>
-                    {% if lot.address_line1 %}
-                        {{ lot.address_line1|title }}<br />
+                    {% if lot.parcel %}
+                        <div>
+                            AIN {{ lot.parcel.ain }}
+                        </div>
                     {% endif %}
-                    {% if lot.city %}
-                        {{ lot.city|title }}, {{ lot.state_province|default:"CA" }}
-                    {% endif %}
-                    {{ lot.postal_code|default:"" }}
-                </div>
 
-                <div>
-                    {% trans "Owner" %}: {{ lot.owner|default:"unknown"|title }}
-
-                    {% if lot.owner and "owners.change_owner" in perms %}
-                        <span class="lot-detail-admin admin-only">
-                            <a class="btn btn-small btn-warning" href="{% url "admin:lots_lot_changelist" %}?owner={{ lot.owner.pk }}">
-                                {% trans "View all lots this owner owns" %}
-                            </a>
-                        </span>
-                    {% endif %}
-                </div>
-
-                {% if lot.number_of_lots > 1 %}
                     <div>
-                        {% trans "Number of Lots" %}: {{ lot.number_of_lots }}
+                        {% if lot.address_line1 %}
+                            {{ lot.address_line1|title }}<br />
+                        {% endif %}
+                        {% if lot.city %}
+                            {{ lot.city|title }}, {{ lot.state_province|default:"CA" }}
+                        {% endif %}
+                        {{ lot.postal_code|default:"" }}
                     </div>
-                {% endif %}
 
-                {% if lot.known_use %}
                     <div>
-                        {% trans "Known Use" %}: {{ lot.known_use }}
+                        {% trans "Owner" %}: {{ lot.owner|default:"unknown"|title }}
+
+                        {% if lot.owner and "owners.change_owner" in perms %}
+                            <span class="lot-detail-admin admin-only">
+                                <a class="btn btn-small btn-warning" href="{% url "admin:lots_lot_changelist" %}?owner={{ lot.owner.pk }}">
+                                    {% trans "View all lots this owner owns" %}
+                                </a>
+                            </span>
+                        {% endif %}
                     </div>
-                {% endif %}
 
-                <div>
-                    {% trans "Area" %}:
-                    {{ lot.area_acres|floatformat:"2"|default:"unknown" }} acres
+                    {% if lot.number_of_lots > 1 %}
+                        <div>
+                            {% trans "Number of Lots" %}: {{ lot.number_of_lots }}
+                        </div>
+                    {% endif %}
+
+                    {% if lot.known_use %}
+                        <div>
+                            {% trans "Known Use" %}: {{ lot.known_use }}
+                        </div>
+                    {% endif %}
+
                 </div>
+            </div>
+        </section>
 
+        <section class="lot-detail-legal">
+            <div class="lot-detail-icon"></div>
+            <div class="lot-detail-content">
+                <ul>
+                    <li>
+                        {% trans "Area" %}:
+                        {{ lot.area_acres|floatformat:"2"|default:"unknown" }} acres
+                    </li>
+                    <li>
+                        {% trans "Use code" %}:
+                        {{ lot.parcel.local_roll.use_cde }}
+                    </li>
+                </ul>
             </div>
         </section>
 
         {% if "lots.view_all_details" in perms %}
             <section>
-                <h2>{% trans "Admin Details" %}</h2>
-                <div class="help-text">(This section is only visible to admins.)</div>
-                <table>
+                <div class="lot-detail-content">
+                    <h2>{% trans "Admin Details" %}</h2>
+                    <div class="help-text">(This section is only visible to admins.)</div>
+                    <table>
 
-                    {% if lot.steward_projects.count > 0 %}
-                    <tr>
-                        <th>{% trans "steward's land tenure" %}:</th>
-                        <td>{{ lot.steward_projects.all.0.land_tenure_status }}</td>
-                    </tr>
-                    {% endif %}
+                        {% if lot.steward_projects.count > 0 %}
+                        <tr>
+                            <th>{% trans "steward's land tenure" %}:</th>
+                            <td>{{ lot.steward_projects.all.0.land_tenure_status }}</td>
+                        </tr>
+                        {% endif %}
 
-                </table>
+                    </table>
+                </div>
             </section>
         {% endif %}
 
         <section>
-            <h2>{% trans "Why is this lot here?" %}</h2>
-            {% if not lot.is_visible %}
-                <p>
-                    {% blocktrans %}
-                        Actually, it should not be here. Let us know so we can take 
-                        care of it.
+            <div class="lot-detail-content">
+                <h2>{% trans "Why is this lot here?" %}</h2>
+                {% if not lot.is_visible %}
+                    <p>
+                        {% blocktrans %}
+                            Actually, it should not be here. Let us know so we can take 
+                            care of it.
+                        {% endblocktrans %}
+                    </p>
+                {% elif not lot.known_use %}
+                    {% get_vacant_reasons for lot as reasons %}
+                    {% if reasons %}
+                        <p>{% trans "We think this lot is vacant because:" %}</p>
+                        <ul class="lot-detail-reasons">
+                            {% for reason in reasons %}
+                                <li>{{ reason|safe }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% else %}
+                    {% blocktrans with use=lot.known_use %}
+                        The lot is being used as a {{ use }}.
                     {% endblocktrans %}
-                </p>
-            {% elif not lot.known_use %}
-                {% get_vacant_reasons for lot as reasons %}
-                {% if reasons %}
-                    <p>{% trans "We think this lot is vacant because:" %}</p>
-                    <ul class="lot-detail-reasons">
-                        {% for reason in reasons %}
-                            <li>{{ reason|safe }}</li>
-                        {% endfor %}
-                    </ul>
                 {% endif %}
-            {% else %}
-                {% blocktrans with use=lot.known_use %}
-                    The lot is being used as a {{ use }}.
-                {% endblocktrans %}
-            {% endif %}
+            </div>
         </section>
 
         <section id="pathways" class="pathways">
-            <h2>
-                {% trans "Pathways" %}
-            </h2>
-            <div>
-                {% blocktrans %}
-                    Here are some pathways you might follow to use this piece of land legally:
-                {% endblocktrans %}
-                {% render_pathway_summary_list for lot %}
+            <div class="lot-detail-content">
+                <h2>
+                    {% trans "Pathways" %}
+                </h2>
+                <div>
+                    {% blocktrans %}
+                        Here are some pathways you might follow to use this piece of land legally:
+                    {% endblocktrans %}
+                    {% render_pathway_summary_list for lot %}
+                </div>
             </div>
         </section>
 
