--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -116,9 +116,14 @@
 
 .lot-detail-content {
     margin-left: 32px;
+    ul {
+        list-style: none;
+        padding: 0;
+    }
 }
 
 .lot-detail-icon {
+    background-image-repeat: no-repeat;
     float: left;
     height: 21px;
     width: 24px;
@@ -132,5 +137,14 @@
     }
     .lot-detail-icon {
         background: url(/static/img/lot-detail-legal.png);
+    }
+}
+
+.lot-detail-ownership {
+    .lot-detail-right();
+    .lot-detail-icon {
+        background: url(/static/img/lot-detail-ownership.png);
+        height: 23px;
+        width: 13px;
     }
 }
