--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -148,3 +148,11 @@
         width: 13px;
     }
 }
+
+.lot-detail-reasons {
+    .lot-detail-right();
+    ul {
+        list-style: disc outside;
+        padding-left: 25px;
+    }
+}
