--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -156,3 +156,11 @@
         padding-left: 25px;
     }
 }
+
+.lot-detail-pathways {
+    .lot-detail-right();
+    ul {
+        list-style: disc outside;
+        padding-left: 25px;
+    }
+}
