--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -327,11 +327,8 @@
             </div>
         </section>
 
-        <section id="pathways" class="pathways">
+        <section class="lot-detail-pathways">
             <div class="lot-detail-content">
-                <h2>
-                    {% trans "Pathways" %}
-                </h2>
                 <div>
                     {% blocktrans %}
                         Here are some pathways you might follow to use this piece of land legally:
