--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -5,6 +5,9 @@
 .btn {
     border: none;
     border-radius: 0;
+    font-family: @header-font-family; 
+    font-size: 18px;
+    font-style: normal;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -12,8 +15,6 @@
 .btn-default {
     background: black;
     color: white;
-    font-family: @header-font-family; 
-    font-size: 18px;
 
     &:hover {
         color: black;
