Initial size range filter

--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -150,7 +150,7 @@
                     <section class="map-filters">
                         <h3 class="map-filters-expander">size</h3>
                         <div class="map-filters-content">
-                            size
+                            <div class="filter filter-size"></div>
                         </div>
                     </section>
                     <section class="map-filters">
