--- a/livinglotsla/templates/_includes.html
+++ b/livinglotsla/templates/_includes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static "bower_components/leaflet/leaflet.css" %}">
     <link rel="stylesheet" href="{% static "bower_components/leaflet.loading/src/Control.Loading.css" %}" />
     <link rel="stylesheet" href="{% static "bower_components/leaflet.usermarker/src/leaflet.usermarker.css" %}" />
+    <link rel="stylesheet" href="{% static "bower_components/nouislider/jquery.nouislider.css" %}" />
     <link rel="stylesheet" href="{% static "bower_components/select2/select2.css" %}" />
     <link rel="stylesheet" href="{% static "css/base.css" %}">
 {% endcompress %}
