Style size range slider

--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -161,3 +161,33 @@
         width: 50px;
     }
 }
+
+.filter-size {
+    margin-left: 10px;
+    margin-right: 10px;
+
+    &.noUi-background {
+        height: 12px;
+    }
+
+    .noUi-connect {
+        background: #CCCCCC;
+        box-shadow: none;
+    }
+
+    .noUi-handle {
+        background: #333333;
+        border-radius: 22px;
+        box-shadow: none;
+        height: 22px;
+        width: 22px;
+
+        &:after {
+            background: transparent;
+        }
+        &:before {
+            background: transparent;
+        }
+    }
+
+}
