--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3945,6 +3945,30 @@ footer .row {
   text-align: center;
   width: 50px;
 }
+.filter-size {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.filter-size.noUi-background {
+  height: 12px;
+}
+.filter-size .noUi-connect {
+  background: #CCCCCC;
+  box-shadow: none;
+}
+.filter-size .noUi-handle {
+  background: #333333;
+  border-radius: 22px;
+  box-shadow: none;
+  height: 22px;
+  width: 22px;
+}
+.filter-size .noUi-handle:after {
+  background: transparent;
+}
+.filter-size .noUi-handle:before {
+  background: transparent;
+}
 #lot-detail-map {
   width: 100%;
   height: 150px;
