--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -190,4 +190,15 @@
         }
     }
 
+    &-labels {
+        margin-top: 10px;
+    }
+    &-label-max {
+        float: right;
+        margin-right: 10px;
+    }
+    &-label-min {
+        float: left;
+        margin-left: 10px;
+    }
 }
