--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -151,6 +151,11 @@
                         <h3 class="map-filters-expander">size</h3>
                         <div class="map-filters-content">
                             <div class="filter filter-size"></div>
+                            <div class="filter-size-labels">
+                                <span class="filter-size-label-min"></span>
+                                <span class="filter-size-label-max"></span>
+                                <div class="clearfix"></div>
+                            </div>
                         </div>
                     </section>
                     <section class="map-filters">
