--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3331,6 +3331,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .map-filters-wrapper:after,
 .map-filters-inner-wrapper:before,
 .map-filters-inner-wrapper:after,
+.map-download-wrapper:before,
+.map-download-wrapper:after,
+.map-download-inner-wrapper:before,
+.map-download-inner-wrapper:after,
 .lot-detail-page .content-wrapper:before,
 .lot-detail-page .content-wrapper:after {
   content: " ";
@@ -3348,6 +3352,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .blog-entry-list article:after,
 .map-filters-wrapper:after,
 .map-filters-inner-wrapper:after,
+.map-download-wrapper:after,
+.map-download-inner-wrapper:after,
 .lot-detail-page .content-wrapper:after {
   clear: both;
 }
@@ -3979,6 +3985,54 @@ footer .row {
 .filter-size-label-min {
   float: left;
   margin-left: 10px;
+}
+.map-download-wrapper {
+  margin-left: 0;
+  margin-right: 0;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 65px;
+  position: absolute;
+  bottom: 0;
+  z-index: 4999;
+}
+@media (min-width: 992px) {
+  .map-download-wrapper {
+    float: left;
+    width: 83.33333333333334%;
+  }
+}
+@media (min-width: 992px) {
+  .map-download-wrapper {
+    margin-left: 8.333333333333332%;
+  }
+}
+.map-download-inner-wrapper {
+  margin-left: 0;
+  margin-right: 0;
+  height: 100%;
+}
+#map-download {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: rgba(255, 255, 255, 0.8);
+  height: 100%;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+@media (min-width: 992px) {
+  #map-download {
+    float: left;
+    width: 25%;
+  }
+}
+#map-download a {
+  color: black;
+  text-decoration: underline;
 }
 #lot-detail-map {
   width: 100%;
