--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -48,7 +48,7 @@
 >
     <div class="map-filters-wrapper">
         <div class="map-filters-inner-wrapper">
-            <div id="map-filters-parent" class="map-filters">
+            <div id="map-filters-parent" class="map-overlay map-filters">
                 <h2 class="map-filters-expander">filter</h2>
                 <section class="map-filters-content">
                     <section class="map-filters">
@@ -93,7 +93,7 @@
                         </div>
                     </section>
                     <section class="map-filters">
-                        <h3 class="map-filters-expander">filter by</h3>
+                        <h3 class="map-filters-expander">political boundaries</h3>
                         <div class="map-filters-content">
                             <section class="map-filters map-filters-grouped">
                                 <h4 class="map-filters-expander">council district</h4>
@@ -165,7 +165,7 @@
 
     <div class="map-download-wrapper">
         <div class="map-download-inner-wrapper">
-            <div id="map-download">
+            <div id="map-download" class="map-overlay">
                 <div>
                     <a class="details-link" href="#">
                         {% blocktrans %}
