--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3913,6 +3913,10 @@ footer .row {
   margin-top: 5px;
   padding: 0;
 }
+.map-filters .select2-container {
+  max-width: 100%;
+  width: 100%;
+}
 .map-filters-type {
   font-weight: bold;
 }
