--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -112,6 +112,11 @@
             padding: 0;
         }
     }
+
+    .select2-container {
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .map-filters-type {
