--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -59,20 +59,24 @@
                                     <li class="map-filters-type-item map-filters-type-public on">
                                         <input type="checkbox" name="public" class="filter filter-layer hidden" checked="true" />
                                         {% trans "publicly owned vacant" %}
+                                        (<span id="public-lots-count"></span>)
                                     </li>
                                     <li class="map-filters-type-item map-filters-type-public-remnant">
                                         <input type="checkbox" name="public_remnant" class="filter filter-layer hidden" />
                                         {% trans "remnant/odd shape" %}
+                                        (<span id="public-remnant-count"></span>)
                                     </li>
                                 </ul>
                                 <ul>
                                     <li class="map-filters-type-item map-filters-type-private on">
                                         <input type="checkbox" name="private" class="filter filter-layer hidden" checked="true" />
                                         {% trans "privately owned vacant" %}
+                                        (<span id="private-lots-count"></span>)
                                     </li>
                                     <li class="map-filters-type-item map-filters-type-private-tax-default">
                                         <input type="checkbox" name="private_tax_default" class="filter filter-layer hidden" />
                                         {% trans "tax default" %}
+                                        (<span id="private-taxdefault-count"></span>)
                                     </li>
                                 </ul>
                                 <ul>
