--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -100,19 +100,6 @@
         width: 100%;
     }
 
-    &-type {
-        margin: 0;
-        margin-left: 20px;
-        padding: 0;
-
-        ul {
-            margin: 0;
-            margin-bottom: 5px;
-            margin-top: 5px;
-            padding: 0;
-        }
-    }
-
     .select2-container {
         max-width: 100%;
         width: 100%;
@@ -120,7 +107,19 @@
 }
 
 .map-filters-type {
-    font-weight: bold;
+    font-size: 14px;
+    font-family: @body-font-family;
+    font-weight: normal;
+    margin: 0;
+    margin-left: 20px;
+    padding: 0;
+
+    ul {
+        margin: 0;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        padding: 0;
+    }
 
     &-item {
         cursor: pointer;
